--- a/src/app/manage/register/register.scss
+++ b/src/app/manage/register/register.scss
@@ -15,6 +15,13 @@
     margin-bottom: 5px;
     display: flex;
   }
+  .file {
+    @extend .row;
+    .name {
+      flex: 1;
+      margin: 0px 10px;
+    }
+  }
   .filelist {
     position: relative;
     input {
