--- a/src/app/manage/register/register.scss
+++ b/src/app/manage/register/register.scss
@@ -15,6 +15,20 @@
     margin-bottom: 5px;
     display: flex;
   }
+  .userHeader {
+    .selectHeader {
+      padding: 10px;
+    }
+    .header {
+      margin: 20px;
+      width: 100%;
+      height: 30vh;
+      text-align: center;
+      >img {
+        height: 100%;
+      }
+    }
+  }
   .file {
     @extend .row;
     .name {
